--- a/trunk/PockeTwit/PockeTwit.csproj
+++ b/trunk/PockeTwit/PockeTwit.csproj
@@ -74,15 +74,15 @@
     <Reference Include="mscorlib" />
     <Reference Include="OpenNETCF, Version=2.3.0.39, Culture=neutral, PublicKeyToken=e60dbea84bb431b7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Smart Device Framework\Bin\OpenNETCF.dll</HintPath>
+      <HintPath>..\Libraries\OpenNETCF.dll</HintPath>
     </Reference>
     <Reference Include="OpenNETCF.WindowsCE, Version=2.3.0.39, Culture=neutral, PublicKeyToken=e60dbea84bb431b7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Smart Device Framework\Bin\OpenNETCF.WindowsCE.dll</HintPath>
+      <HintPath>..\Libraries\OpenNETCF.WindowsCE.dll</HintPath>
     </Reference>
     <Reference Include="OpenNETCF.WindowsCE.Messaging, Version=2.3.0.39, Culture=neutral, PublicKeyToken=e60dbea84bb431b7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files\Smart Device Framework\Bin\OpenNETCF.WindowsCE.Messaging.dll</HintPath>
+      <HintPath>..\Libraries\OpenNETCF.WindowsCE.Messaging.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
